<resources>
    <string name="app_name">I-WATTS-FirstDraft</string>
    <string name="text1">Your I-WATTS dashboard anywhere you go</string>
    <string name="text2">Before you start, connect your I-WATTS device to begin monitoring power in real-time.</string>
    <string name="text3">SEARCH DEVICE</string>
    <string name="text4">Scanning for Devices</string>
    <string name="text5">Looking for nearby I-WATTS devices…</string>
    <string name="text6">This may take a moment. Please keep the app open.</string>
    <string name="text7">DEVICE FOUND!</string>
    <string name="text8">CONNECT</string>
    <string name="text9">SCAN AGAIN</string>
    <string name="text10">ENTER DEVICE PASSWORD</string>
    <string name="text11">CONNECTION SUCCESSFUL!</string>
    <string name="text12">Main  Consumption</string>
    <string name="text13">0 watts</string>
    <string name="text14">Today\'s consumption: 0 kWh</string>
    <string name="text15">00:00:00 AM</string>
    <string name="text16">Area 1</string>
    <string name="text17">Area 2</string>
    <string name="text18">Area 3</string>
    <string name="text19">0 w</string>
    <string name="text20">0% of total</string>
    <string name="text21">Estimated Total Cost</string>
    <string name="text22">₱</string>
    <string name="text23">BATELEC II Rate:</string>
    <string name="text24">x</string>
    <string name="text25">I-WATTS Device Battery Life</string>
    <string name="text26">Peak Usage Analysis</string>
    <string name="text27">Peak Time </string>
    <string name="text28">Peak Value</string>
    <string name="text29">0%</string>
    <string name="text30">day, mm/dd</string>
    <string name="text31">Real - Time Monitoring</string>
    <string name="text32">Daily Consumption Summary</string>
    <string name="text33">Today\'s Total</string>
    <string name="text34">0 kWh</string>
    <string name="text35">vs. previous day</string>
    <string name="text36">Peak Usage</string>
    <string name="text37">Estimated Cost</string>
    <string name="text38">Total Consumption</string>
    <string name="text39">Peak Consumption</string>
    <string name="text40">Share of Total</string>
    <string name="text41">Historical Analysis</string>
    <string name="text42">Start Date</string>
    <string name="text43">End Date</string>
    <string name="text44">Daily Average</string>
    <string name="text45">Total Cost</string>
    <string name="text46">0% vs previous period</string>
    <string name="text47">Comparison with Previous Period </string>
    <string name="text48">PREVIOUS</string>
    <string name="text49">PRESENT</string>
    <string name="text50">date</string>
    <string name="text51">Area Consumption Pattern</string>
    <string name="text52">Cost Estimation</string>
    <string name="text53">Total Usage</string>
    <string name="text54">Daily Cost</string>
    <string name="text55">Daily Cost Breakdown</string>
    <string name="text56">Area Cost Comparison</string>
    <string name="text57">Electricity Rate</string>
    <string name="text58">BATELEC II Rate as of</string>
    <string name="text59">₱ / kWh</string>
    <string name="text60">Cost Distribution by Area</string>
    <string name="text61">For 0 kWh at ₱ / kWh</string>
    <string name="text62">Projected Monthly:</string>
    <string name="text63">Based on current n-day consumption pattern</string>
    <string name="text64">Settings</string>
    <string name="text65">Account</string>
    <string name="text66">Notification</string>
    <string name="text67">Tips</string>
    <string name="text68">Alerts</string>
    <string name="text69">Device Settings</string>
    <string name="text70">About</string>

</resources>