<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E787"
    tools:context=".SettingsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:background="@drawable/bg_white_slope"
        app:layout_constraintBottom_toBottomOf="parent"
        />

<ImageView
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:src="@drawable/ic_arrow_back"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="50dp"
    android:layout_marginBottom="350dp"
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="350dp"
        android:text="@string/text64"
        android:textColor="#863B17"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="28sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_account"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="150dp"
        android:text="@string/text65"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_device_settings"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/btn_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/text69"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_notification"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/btn_device_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/text66"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_alert"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/btn_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/text68"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_tips"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/btn_alert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/text67"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_about"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/btn_tips"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/text70"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>