<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E787"
    tools:context=".EnterDevicePasswordActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/bg_white_slope"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="100dp"
        android:text="@string/text10"
        android:textColor="#863B17"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_connect"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="150dp"
        android:text="@string/text8"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scan_again"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@drawable/bg_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        android:text="@string/text9"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>